<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="24dp"
    android:layout_marginTop="48dp"
    android:orientation="vertical"
    android:padding="12dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="24dp"
        android:orientation="vertical"
        android:padding="12dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/reserve_book_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@drawable/book" />

        </LinearLayout>

        <TextView
            android:id="@+id/reserve_book_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reserve_books"
            android:textAppearance="@style/TextAppearance.AppCompat.Display2" />

        <TextView
            android:id="@+id/reserve_booktitle"
            style="@style/AppTheme.AppBarOverlay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/book_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

        <TextView
            android:id="@+id/reserve_book_author"
            style="@android:style/Widget.TextView.PopupMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/author_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

        <TextView
            android:id="@+id/reserve_book_available"
            style="@android:style/TextAppearance.Material.Headline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_weight="1"
            android:gravity="end"
            android:text="@string/available" />

        <ProgressBar
            android:id="@+id/reserve_book_progress"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_gravity="bottom|end"
            android:layout_weight="1" />

        <Button
            android:id="@+id/reserve_reserve"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/reserve" />

        <TextView
            android:id="@+id/reserve_date"
            style="@style/TextAppearance.AppCompat.Display1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/reserve_date" />

        <Button
            android:id="@+id/reserve_complete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_weight="1"
            android:text="@string/reserve_complete" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/reserve_share_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:srcCompat="@drawable/ic_menu_share" />

            <Button
                android:id="@+id/reserve_share"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/share" />

        </LinearLayout>


    </LinearLayout>


</ScrollView>
