<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/side_nav"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/side_nav_bar"
    android:gravity="bottom"
    android:orientation="vertical"
    android:padding="16dp"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <ImageView
        android:id="@+id/user_image"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:paddingTop="8dp"
        app:srcCompat="@mipmap/ic_launcher" />

    <TextView
        android:id="@+id/name_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:text="@string/user_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

    <TextView
        android:id="@+id/email_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_email" />


    <TextView
        android:id="@+id/grade_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_grade" />


</LinearLayout>
