<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="24dp"
    android:layout_marginTop="48dp"
    android:orientation="vertical"
    android:padding="12dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="24dp"
        android:orientation="vertical"
        android:padding="12dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/book_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                app:srcCompat="@drawable/book" />

        </LinearLayout>

        <TextView
            android:id="@+id/book_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/book_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Display2"
            android:textColor="@color/cardview_dark_background" />

        <TextView
            android:id="@+id/book_author"
            style="@style/AppTheme.AppBarOverlay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingLeft="12dp"
            android:text="@string/author_title"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

        <TextView
            android:id="@+id/book_description"
            style="@android:style/Widget.DeviceDefault.Light.TextView.SpinnerItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/description"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/rating"
                style="@android:style/TextAppearance.Material.Headline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center|end"
                android:layout_weight="1"
                android:text="@string/rating" />

            <RatingBar
                android:id="@+id/book_rating"
                style="@style/Widget.AppCompat.RatingBar.Indicator"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_weight="1"
                android:isIndicator="true"
                android:numStars="5"
                android:stepSize="0.1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/book_available"
                style="@android:style/TextAppearance.Material.Headline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_weight="1"
                android:text="@string/available" />

            <ProgressBar
                android:id="@+id/book_progress"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_gravity="bottom|end"
                android:layout_weight="1" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="15dp"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/check_out_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:srcCompat="@drawable/shoppingcart" />

            <Button
                android:id="@+id/check_out"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/bag_out" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/reserve_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:srcCompat="@drawable/ic_media_pause_light" />

            <Button
                android:id="@+id/reserve"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/reserve" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/share_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:srcCompat="@drawable/ic_menu_share" />

            <Button
                android:id="@+id/share"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/share" />

        </LinearLayout>


        <TextView
            android:id="@+id/commentView"
            style="@style/Base.TextAppearance.AppCompat.Headline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/reviews" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/comment_review"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:visibility="visible" >

        </android.support.v7.widget.RecyclerView>

        <TextView
            android:id="@+id/textView"
            style="@style/Base.TextAppearance.AppCompat.Headline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/similar" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/books_similar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:visibility="visible" >

        </android.support.v7.widget.RecyclerView>

    </LinearLayout>


</ScrollView>
